public class Venta {
}
