@startuml
'https://plantuml.com/class-diagram

class Supermercado {
}

Lampara --|> Electrodomestico
Electrodomestico --|> ProductoDeVenta
Bebida --|> ProductoDeVenta
Alimento --|> ProductoDeVenta
Ropa --|> ProductoDeVenta
Vino --|> Bebida
Leche --|> Bebida


Supermercado -> ProductoDeVenta
Supermercado --> Empleado
Supermercado --> Venta
Cajero --|> Empleado
Guardia --|> Empleado
Supermercado --> Cliente
Supermercado --> Baño
Baño --> TipoBaño
Supermercado --> Ganancias
Venta --> Factura
Factura -> Cliente

Empleado --> Salario

class Ganancias {

}

enum TipoBaño {
    HOMBRE
    MUJER
    OTRE
}

class Venta {
 - fechaDeVenta : Fecha
}

@enduml